crates/reflect-tui/src/tui_core/onboarding/snapshots/reflect_tui__tui_core__onboarding__trust_directory__tests__renders_snapshot_for_git_repo.snap
---
source: crates/reflect-tui/src/tui_core/onboarding/trust_directory.rs
expression: terminal.backend()
---
> You are in /workspace/project

  Do you trust the contents of this directory? Working with untrusted
  contents comes with higher risk of prompt injection. Trusting the
  directory allows project-local config, hooks, and exec policies to
  load.

Yes, continue
No, quit

  Press enter to continue
